--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 			<h4 class="title is-4 is-spaced">Eu já tenho Windows/Mac instalado na minha máquina, posso ter o Linux também?</h4>
 			<h5 class="subtitle is-5 space-bottom">			
-				Sim. Os dois sistemas podem ser instalados na mesma máquina, porém em partições diferentes do disco. Isso é o que chamamos de dual boot. Mas não faremos a instalação de Windows ou qualquer outro Aplicativo Proprietário durante o Installfest. 
+				Sim. Os dois sistemas podem ser instalados na mesma máquina, porém em partições diferentes do disco. Isso é o que chamamos de dual boot. Mas não realizaremos este tipo de processo durante o nosso install fest.
 			</h5>
 
 			<h4 class="title is-4 is-spaced">Quanto tempo demora a instalação?</h4>
