:package: Organiza pastas e arquivos

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
 	<!-- Css -->
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.1/css/bulma.min.css">
 </head>
 <body>
 	<a href="#top" class="button-radius">
-		<img src="up-arrow.svg" alt="Seta Cima" />
+		<img src="image/up-arrow.svg" alt="Seta Cima" />
 	</a>
 	<section class="hero is-primary is-medium">
 		<!-- Hero content: will be in the middle -->
@@ -222,6 +222,6 @@
 
 	<!-- Script -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="script.js"></script>
+	<script src="script/script.js"></script>
 </body>
 </html>
