:pencil2: Adiciona Cronograma a Página

--- a/index.html
+++ b/index.html
@@ -22,15 +22,7 @@
 				<img src="https://phpwomen.org/holdingpage/images/php-logo-white-inversed.png" alt="Logo" class="logo">
 				<h1 class="title is-1">Install Fest - PHP Women RJ</h1>
 				<h2 class="subtitle is-3"> 2 de Setembro de 2017 - Mundipagg</h2>
-				<div class="is-hidden-mobile">
-					<a class="button is-danger space-right" href="https://docs.google.com/forms/d/e/1FAIpQLScloCKhia2HgMNq32nGquhgrdMIJxikwfxya1O1P50a-gT41g/viewform?usp=sf_link">Inscrição para Participante</a>
-					<a class="button is-danger space-left" href="https://docs.google.com/forms/d/e/1FAIpQLSfQUuQ7_aK89HHMqIrUu-Cp81g20u3TTVMkieXkrBmKoFlXZw/viewform?usp=sf_link">Inscrição para Mentoria</a>
-				</div>
-				<div class="is-hidden-tablet">
-					<a class="button is-danger is-flex-mobile" href="https://docs.google.com/forms/d/e/1FAIpQLScloCKhia2HgMNq32nGquhgrdMIJxikwfxya1O1P50a-gT41g/viewform?usp=sf_link">Inscrição para Participante</a>
-					<br>
-					<a class="button is-danger is-flex-mobile" href="https://docs.google.com/forms/d/e/1FAIpQLSfQUuQ7_aK89HHMqIrUu-Cp81g20u3TTVMkieXkrBmKoFlXZw/viewform?usp=sf_link">Inscrição para Mentoria</a>
-				</div>
+				<a class="button is-danger space-right" disabled>Inscrição Encerradas</a>
 			</div>
 		</div>
 
@@ -118,11 +110,39 @@
 					</tr>
 					<tr>
 						<td class="has-text-centered">10:00h</td>
-						<td>Início do Evento</td>
+						<td>Introdução ao Linux</td>
 					</tr>
 					<tr>
-						<th class="has-text-centered">~</th>
-						<th>Em breve cronograma completo.</th>
+						<td class="has-text-centered">10:40h</td>
+						<td>Introdução ao Ubuntu e suas Versões</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">11:20h</td>
+						<td>Instalação dos Sistema Operacional</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">12:00h</td>
+						<td>Almoço</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">13:00h</td>
+						<td>Comandos Básicos do Terminal</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">13:40h</td>
+						<td>Instalação de Programas e Linguagens</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">14:20h</td>
+						<td>Código Aberto x Software Livre</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">15:00h</td>
+						<td>Open Space (Conteúdo Extra dos Mentores)</td>
+					</tr>
+					<tr>
+						<td class="has-text-centered">16:30h</td>
+						<td>Sorteio</td>
 					</tr>
 					<tr>
 						<td class="has-text-centered">17:00h</td>
